--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -1,2 +1,39 @@
 .header {
+    padding-bottom: 3px;
+
+    background-color: #fff;
+    box-shadow: 0px 0px 1px rgba(49, 70, 124, 0.25),
+        0px 0px 10px rgba(165, 172, 199, 0.4);
+
+    &__top {
+        background-color: $colors-font-main;
+    }
+
+    &__top-inner {
+        min-height: 25px;
+
+        display: flex;
+        align-items: center;
+
+        font-size: 1.2rem;
+        color: #cce1e3;
+    }
+
+    &__main {
+    }
+
+    &__main-top {
+        margin-top: 29px;
+        margin-bottom: 6px;
+
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    &__main-bottom {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
 }
