--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -16,11 +16,44 @@
 html {
     font-size: 62.5%;
 }
+
 body {
-    font-family: 'Open Sans', sans-serif;
+    font-family: $family;
     font-size: 1.6rem;
+    color: $colors-font-main;
+
+    background-color: #e9f3f4;
+}
+
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    margin: 0;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
 }
 
 // components
 @import 'components/header.scss';
 @import 'components/footer.scss';
+@import 'components/container.scss';
+@import 'components/nav.scss';
+@import 'components/socials.scss';
+@import 'components/form.scss';
+@import 'components/contacts.scss';
+@import 'components/burger.scss';
+@import 'components/btn.scss';
+@import 'components/user-controls.scss';
