--- a/src/scss/components/btn.scss
+++ b/src/scss/components/btn.scss
@@ -17,14 +17,27 @@
         font-size: 2rem;
         font-weight: 800;
         line-height: 1.2;
-        letter-spacing: 0.08rem;
+        letter-spacing: 0.08em;
         text-transform: uppercase;
 
         border-radius: 4px;
     }
 
+    &--xl {
+        width: 100%;
+        height: 54px;
+
+        font-weight: 400;
+        letter-spacing: 0.1em;
+        color: #182d4d;
+        text-transform: uppercase;
+
+        background-color: #f6feff;
+        border-radius: 4px;
+        border: 1px solid #96afb1;
+    }
+
     &--black {
-        margin-top: 24px;
         background-color: #000;
         color: #fff;
     }
