--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -62,3 +62,6 @@ a {
 @import 'components/btn.scss';
 @import 'components/user-controls.scss';
 @import 'components/banner.scss';
+@import 'components/section.scss';
+@import 'components/card.scss';
+@import 'components/swiper.scss';
