--- a/src/scss/components/banner.scss
+++ b/src/scss/components/banner.scss
@@ -4,6 +4,44 @@
 
     display: flex;
 
+    &--1 {
+        min-height: 143px;
+        padding: 30px 40px;
+
+        display: flex;
+        justify-content: space-between;
+
+        background-image: url('../img/card/grinder.png'),
+            url('../img/banner/1/bg.jpg');
+
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: auto, cover;
+
+        .banner__title {
+            max-width: 499px;
+
+            font-size: 2.6rem;
+            font-weight: 400;
+            letter-spacing: 0.05em;
+            line-height: 1.2;
+            color: #fff;
+
+            strong {
+                font-size: 4.8rem;
+                font-weight: 800;
+                color: #dbff00;
+            }
+        }
+
+        .banner__btn {
+            max-width: 323px;
+            width: 100%;
+            height: 64px;
+            margin-top: 10px;
+        }
+    }
+
     &__sale {
         display: flex;
         align-items: center;
