--- a/src/scss/components/banner.scss
+++ b/src/scss/components/banner.scss
@@ -7,6 +7,7 @@
     &--1 {
         min-height: 143px;
         padding: 30px 40px;
+        margin-bottom: 60px;
 
         display: flex;
         justify-content: space-between;
