feat: add section brands

--- a/src/scss/components/section.scss
+++ b/src/scss/components/section.scss
@@ -29,6 +29,15 @@
         }
     }
 
+    &--brands {
+        background-color: #fff;
+
+        .section__inner {
+            padding-top: 60px;
+            padding-bottom: 66px;
+        }
+    }
+
     &__title {
         margin-bottom: 56px;
 
