feat: scroll to top btn

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,6 +1,9 @@
 <footer class="footer">
     <div class="container container--md">
         <div class="footer__inner">
+            <button type="button" class="footer__to-top">
+                <img src="img/icons/arrow-top.svg" alt="">
+            </button>
             <div class="footer__top">
                 <div class="footer__about-company">
                     <a href="index.html" class="logo footer__logo">
