feat: add user controls dots

--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -136,12 +136,14 @@
                         <button type="button" class="btn user-controls__btn">
                             <img src="img/icons/like.svg" class="btn__icon" alt="">
                             Избранное
+                            <span class="user-controls__btn-dot purple"></span>
                         </button>
                     </li>
                     <li class="user-controls__item">
                         <button type="button" class="btn user-controls__btn">
                             <img src="img/icons/cart.svg" class="btn__icon" alt="">
                             Корзина
+                            <span class="user-controls__btn-dot orange"></span>
                         </button>
                     </li>
                 </ul>
