--- a/src/scss/components/user-controls.scss
+++ b/src/scss/components/user-controls.scss
@@ -7,8 +7,29 @@
     }
 
     &__btn {
+        position: relative;
+
         font-size: 1.4rem;
         font-weight: 600;
         letter-spacing: 0.05rem;
+    }
+
+    &__btn-dot {
+        position: absolute;
+        top: 0;
+        right: -6px;
+
+        width: 8px;
+        height: 8px;
+
+        border-radius: 50%;
+    }
+
+    .purple {
+        background-color: #8960e0;
+    }
+
+    .orange {
+        background-color: #ff4207;
     }
 }
