fix: add icon in header

--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -72,7 +72,7 @@
                 <address class="contacts">
                     <div class="contacts__data">
                         <div class="contacts__item">
-                            <img class="contacts__icon" src="img/icons/envelope.svg" alt="электронная почта">
+                            <img class="contacts__icon" src="img/icons/envelope.svg" alt="конверт">
                             <a href="mailto:info@bong420.ru">info@bong420.ru</a>
                         </div>
                         <div class="contacts__item ">
