--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -65,3 +65,4 @@ a {
 @import 'components/section.scss';
 @import 'components/card.scss';
 @import 'components/swiper.scss';
+@import 'components/dropdown.scss';
