--- a/src/scss/components/btn.scss
+++ b/src/scss/components/btn.scss
@@ -48,6 +48,12 @@
         color: #000;
     }
 
+    &--outline {
+        border: 1px solid #96afb1;
+        font-weight: 400;
+        color: #182d4d;
+    }
+
     &__icon {
         margin-right: 5px;
     }
