--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -127,7 +127,7 @@
 
                 <ul class="user-controls">
                     <li class="user-controls__item">
-                        <div class="dropdown dropdown--user active">
+                        <div class="dropdown dropdown--user">
                             <button type="button" class="btn user-controls__btn dropdown__btn">
                                 <img src="img/icons/user.svg" class="btn__icon" alt="">
                                 Пользователь
@@ -158,7 +158,7 @@
                         </button>
                     </li>
                     <li class="user-controls__item">
-                        <div class="dropdown dropdown--cart active">
+                        <div class="dropdown dropdown--cart">
                             <button type="button" class="btn user-controls__btn dropdown__btn">
                                 <img src="img/icons/cart.svg" class="btn__icon" alt="">
                                 Корзина
@@ -287,7 +287,6 @@
                                             stroke="#96AFB1" stroke-width="2" stroke-linecap="round"
                                             stroke-linejoin="round" />
                                     </svg>
-
                                     <span>Очистить корзину</span>
                                 </button>
                             </div>
